src/web/snapshots/rustlog__web__tests__channel_invalid_month.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111/2026/13/1
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid param: Invalid month: 13 (expected 1-12)
