src/web/snapshots/rustlog__web__tests__channel_latest_redirect.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111
status: 303 See Other
location: /channelid/11111/2026/3/15
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
