src/web/snapshots/rustlog__web__tests__channel_range.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111?from=2026-03-01T00:00:00Z&to=2026-03-02T12:00:00Z
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[2026-03-01 07:00:00] #testchan alice: hello world
[2026-03-01 08:30:00] #testchan bob: hi alice
[2026-03-01 09:00:00] #testchan alice: hello again
[2026-03-02 06:15:00] #testchan bob: good morning
