src/web/snapshots/rustlog__web__tests__channel_range_invalid.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111?from=garbage&to=2026-03-02T12:00:00Z
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Failed to deserialize query string: from: input contains invalid characters
