src/web/snapshots/rustlog__web__tests__channel_stats.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111/stats
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
