src/web/snapshots/rustlog__web__tests__channel_unknown.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/99999/2026/3/1
status: 404 Not Found
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Not found
