src/web/snapshots/rustlog__web__tests__channels_put.snap
---
source: src/web/tests.rs
expression: rendered
---
PUT /channels
status: 405 Method Not Allowed
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
